// SPDX-License-Identifier: MIT
// Copyright (c) 2025 Sorcha Contributors

using Microsoft.Extensions.Configuration;
using Microsoft.Extensions.Logging;
using Sorcha.Register.Models;

namespace Sorcha.ServiceClients.Register;

/// <summary>
/// gRPC/HTTP client for Register Service operations
/// </summary>
public class RegisterServiceClient : IRegisterServiceClient
{
    private readonly ILogger<RegisterServiceClient> _logger;
    private readonly string _serviceAddress;
    private readonly bool _useGrpc;

    public RegisterServiceClient(
        IConfiguration configuration,
        ILogger<RegisterServiceClient> logger)
    {
        _logger = logger ?? throw new ArgumentNullException(nameof(logger));

        _serviceAddress = configuration["ServiceClients:RegisterService:Address"]
            ?? configuration["GrpcClients:RegisterService:Address"]
            ?? throw new InvalidOperationException("Register Service address not configured");

        _useGrpc = configuration.GetValue<bool>("ServiceClients:RegisterService:UseGrpc", false);

        _logger.LogInformation(
            "RegisterServiceClient initialized (Address: {Address}, Protocol: {Protocol})",
            _serviceAddress, _useGrpc ? "gRPC" : "HTTP");
    }

    // =========================================================================
    // Docket Operations
    // =========================================================================

    public async Task<bool> WriteDocketAsync(
        DocketModel docket,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Writing docket {DocketNumber} to register {RegisterId}",
                docket.DocketNumber, docket.RegisterId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service docket write not yet implemented - returning success");

            return await Task.FromResult(true);
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to write docket {DocketNumber} to register {RegisterId}",
                docket.DocketNumber, docket.RegisterId);
            return false;
        }
    }

    public async Task<DocketModel?> ReadDocketAsync(
        string registerId,
        long docketNumber,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Reading docket {DocketNumber} from register {RegisterId}",
                docketNumber, registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service docket read not yet implemented - returning null");

            return await Task.FromResult<DocketModel?>(null);
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to read docket {DocketNumber} from register {RegisterId}",
                docketNumber, registerId);
            return null;
        }
    }

    public async Task<DocketModel?> ReadLatestDocketAsync(
        string registerId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Reading latest docket from register {RegisterId}", registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service latest docket read not yet implemented - returning null");

            return await Task.FromResult<DocketModel?>(null);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to read latest docket from register {RegisterId}", registerId);
            return null;
        }
    }

    public async Task<long> GetRegisterHeightAsync(
        string registerId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Getting register height for {RegisterId}", registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service height query not yet implemented - returning -1");

            return await Task.FromResult(-1L);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to get register height for {RegisterId}", registerId);
            return -1L;
        }
    }

    // =========================================================================
    // Transaction Operations
    // =========================================================================

    public async Task<TransactionModel> SubmitTransactionAsync(
        string registerId,
        TransactionModel transaction,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Submitting transaction {TransactionId} to register {RegisterId}",
                transaction.Id, registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service transaction submission not yet implemented - returning input");

            return await Task.FromResult(transaction);
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to submit transaction {TransactionId} to register {RegisterId}",
                transaction.Id, registerId);
            throw;
        }
    }

    public async Task<TransactionModel?> GetTransactionAsync(
        string registerId,
        string transactionId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Getting transaction {TransactionId} from register {RegisterId}",
                transactionId, registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service transaction query not yet implemented - returning null");

            return await Task.FromResult<TransactionModel?>(null);
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to get transaction {TransactionId} from register {RegisterId}",
                transactionId, registerId);
            return null;
        }
    }

    public async Task<TransactionPage> GetTransactionsAsync(
        string registerId,
        int page = 1,
        int pageSize = 20,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Getting transactions from register {RegisterId} (page {Page}, size {PageSize})",
                registerId, page, pageSize);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service transactions query not yet implemented - returning empty page");

            return await Task.FromResult(new TransactionPage
            {
                Page = page,
                PageSize = pageSize,
                Total = 0,
                Transactions = new List<TransactionModel>()
            });
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to get transactions from register {RegisterId}", registerId);
            throw;
        }
    }

    public async Task<TransactionPage> GetTransactionsByWalletAsync(
        string registerId,
        string walletAddress,
        int page = 1,
        int pageSize = 20,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Getting transactions for wallet {WalletAddress} from register {RegisterId}",
                walletAddress, registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service wallet transactions query not yet implemented - returning empty page");

            return await Task.FromResult(new TransactionPage
            {
                Page = page,
                PageSize = pageSize,
                Total = 0,
                Transactions = new List<TransactionModel>()
            });
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to get transactions for wallet {WalletAddress} from register {RegisterId}",
                walletAddress, registerId);
            throw;
        }
    }

    public async Task<List<TransactionModel>> GetTransactionsByInstanceIdAsync(
        string registerId,
        string instanceId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug(
                "Getting transactions for instance {InstanceId} from register {RegisterId}",
                instanceId, registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service instance transactions query not yet implemented - returning empty list");

            return await Task.FromResult(new List<TransactionModel>());
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "Failed to get transactions for instance {InstanceId} from register {RegisterId}",
                instanceId, registerId);
            throw;
        }
    }

    // =========================================================================
    // Register Management
    // =========================================================================

    public async Task<Sorcha.Register.Models.Register?> GetRegisterAsync(
        string registerId,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Getting register info for {RegisterId}", registerId);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service register query not yet implemented - returning placeholder");

            var register = new Sorcha.Register.Models.Register
            {
                Id = registerId,
                Name = $"Register {registerId}",
                Height = 0,
                Status = Sorcha.Register.Models.Enums.RegisterStatus.Online,
                Advertise = true,
                IsFullReplica = true,
                TenantId = "default",
                CreatedAt = DateTime.UtcNow.AddDays(-30),
                UpdatedAt = DateTime.UtcNow
            };

            return await Task.FromResult(register);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to get register info for {RegisterId}", registerId);
            return null;
        }
    }

    public async Task<Sorcha.Register.Models.Register> CreateRegisterAsync(
        string registerId,
        string name,
        string blueprintId,
        string owner,
        string tenant,
        CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogDebug("Creating register {RegisterId} with name {Name}", registerId, name);

            // TODO: Implement gRPC/HTTP call to Register Service
            _logger.LogWarning("Register Service register creation not yet implemented - returning placeholder");

            var register = new Sorcha.Register.Models.Register
            {
                Id = registerId,
                Name = name,
                Height = 0,
                Status = Sorcha.Register.Models.Enums.RegisterStatus.Online,
                Advertise = true,
                IsFullReplica = true,
                TenantId = tenant,
                CreatedAt = DateTime.UtcNow,
                UpdatedAt = DateTime.UtcNow
            };

            return await Task.FromResult(register);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to create register {RegisterId}", registerId);
            throw;
        }
    }
}
